--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+:root {
+  --font-main: 'Montserrat', sans-serif;
+}
+
 body {
   margin: 0;
   padding: 0;
-  overflow: hidden; 
+  overflow: hidden;
+  font-family: var(--font-main);
 }
